--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
                         <div class="contact-icon">📍</div>
                         <div>
                             <div style="font-weight: 600; margin-bottom: 0.25rem;" data-i18n="label_address">Adresse</div>
-                            <div>Route de Bizerte, Chorfech<br>2036 Tunis, Tunisie</div>
+                            <div>Sidi thabet, Chorfech1<br>Ariana, Tunisie</div>
                         </div>
                     </div>
                     
@@ -1079,7 +1079,7 @@
                         <div class="contact-icon">📞</div>
                         <div>
                             <div style="font-weight: 600; margin-bottom: 0.25rem;" data-i18n="label_phone">Téléphone</div>
-                            <div>+216 71 XXX XXX</div>
+                            <div>53 509 517</div>
                         </div>
                     </div>
                     
@@ -1087,7 +1087,7 @@
                         <div class="contact-icon">✉️</div>
                         <div>
                             <div style="font-weight: 600; margin-bottom: 0.25rem;" data-i18n="label_email">Email</div>
-                            <div>contact@sesam-chorfech.tn</div>
+                            <div>Sesam.chorfech@gmail.com</div>
                         </div>
                     </div>
 
@@ -1578,3 +1578,4 @@ const translations = {
 </script>
 </body>
 </html>
+
